# HW7-ORM-SQLAlchemy

./: alembic.ini  docker-compose.yaml  pyproject.toml  seed.py  select.py  tables.py
alembic/: env.py
migrations/: env.py
migrations/versions/: 0e2faff5d503_init.py  4f834ab727ce_initial_migration.py
