[tool.poetry]
name = "lesson 7"
version = "0.1.0"
description = ""
authors = ["Nataly"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
Faker = "^26.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
